# antifraud_ecup

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-exploration.ipynb  02-baseline.ipynb  codenrock.ipynb  do.ipynb  ml_ozon_сounterfeit_baseline.ipynb  submission.csv
src/: train.py
src/data/: dataset.py  processing.py  transform.py
src/utils/: cli.py
