[project]
name = "antifraud-ecup"
version = "0.1.0"
description = ""
authors = [
    {name = "senks69"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.6"
pandas = "^2.3.1"
numpy = "^2.3.2"

